<resources>
    <string name="app_name">RotiKing Delivery</string>
    <string name="profile">Profile</string>
    <string name="orders">Orders</string>
    <string name="have_a_great_lunch">Have a great lunch</string>
    <string name="delivery_login">Delivery Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forget_password">Forget Password</string>
    <string name="login">Login</string>
    <string name="terms_privacy">Terms | Privacy</string>
    <string name="account_recovery">Account Recovery</string>
    <string name="enter_your_email">Enter Your Email</string>
    <string name="otp">OTP</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="recover">Recover</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="canceled">Canceled</string>
    <string name="delivered">Delivered</string>
    <string name="dispatched">Dispatched</string>
    <string name="no_orders_to_fulfil">No Orders to fulfil.</string>
    <string name="order_000000">#~order~000000</string>
    <string name="o_items">O Items</string>
    <string name="price">Price</string>
    <string name="payment_method">Payment Method</string>
    <string name="preparing">preparing...</string>
    <string name="time">Time</string>
    <string name="order_detail">Order Detail</string>
    <string name="tracking">Tracking</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="ordered">Ordered...</string>
    <string name="total_price">Total Price</string>
    <string name="delivery_price">Delivery Price</string>
    <string name="total_payable">Total Payable</string>
    <string name="delivery_address">Delivery Address</string>
    <string name="no_name">No Name</string>
    <string name="no_address">No Address</string>
    <string name="no_phone">No Phone</string>
    <string name="cash">cash</string>
    <string name="_0">0</string>
    <string name="_0_items">0 Items</string>
    <string name="allotted_delivery_agent">Allotted Delivery Agent</string>
    <string name="enter_verification_code">Enter verification code</string>
    <string name="delivery_verification_code">Delivery Verification code</string>
    <string name="take_the_code_from_the_customer_after_giving_the_food_package_to_the_customer">Take the code from the customer after giving the food package to the customer.</string>
    <string name="close">Close</string>
    <string name="track_on_map">Track on Map</string>
    <string name="order_name">Order Name</string>
    <string name="logout">Logout</string>
    <string name="edit_photo">Edit Photo</string>
    <string name="username">Username</string>
    <string name="name">Name</string>
    <string name="photo">Photo</string>
    <string name="save">Save</string>
    <string name="on_way">On Way</string>
    <string name="resent_otp">Resent OTP</string>
</resources>