<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".tabs.OrdersFragment"
    android:padding="10dp"
    android:orientation="vertical">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/orders"
        android:textSize="20sp"
        android:textStyle="bold"/>

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/orders_filter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        app:singleSelection="true"
        app:selectionRequired="true">

        <com.google.android.material.chip.Chip
            android:id="@+id/ordered"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/orders"
            style="@style/Widget.MaterialComponents.Chip.Filter"
            android:checked="true"/>

        <com.google.android.material.chip.Chip
            android:id="@+id/dispatched"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dispatched"
            style="@style/Widget.MaterialComponents.Chip.Filter" />

        <com.google.android.material.chip.Chip
            android:id="@+id/on_way"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/on_way"
            style="@style/Widget.MaterialComponents.Chip.Filter" />

        <com.google.android.material.chip.Chip
            android:id="@+id/delivered"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delivered"
            style="@style/Widget.MaterialComponents.Chip.Filter"/>

        <com.google.android.material.chip.Chip
            android:id="@+id/canceled"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/canceled"
            style="@style/Widget.MaterialComponents.Chip.Filter"/>

    </com.google.android.material.chip.ChipGroup>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/order_rv"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:id="@+id/no_orders_i"
            android:orientation="vertical"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:src="@drawable/empty"
                android:contentDescription="@string/no_orders_to_fulfil"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/no_orders_to_fulfil"/>

        </LinearLayout>

    </RelativeLayout>

</LinearLayout>