<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RecoverPasswordActivity"
    android:padding="20dp"
    style="@style/BackgroundColor">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="40dp"
            style="@style/ImgTextLogo" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/have_a_great_lunch"
            android:textSize="11sp"/>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:src="@drawable/password"
            android:layout_marginTop="30dp"
            android:contentDescription="@string/password"/>

        <TextView
            android:id="@+id/title_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/account_recovery"
            android:layout_marginTop="25dp"
            style="@style/Heading"/>

        <TextView
            android:id="@+id/message_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enter_your_email"
            android:textSize="12sp"
            android:paddingHorizontal="10dp"
            style="@style/Text" />

        <LinearLayout
            android:id="@+id/email_section"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_baseline_alternate_email_24"
                android:layout_gravity="center_vertical"
                android:contentDescription="@string/email"/>

            <EditText
                android:id="@+id/email_e_txt"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:autofillHints="emailAddress"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:padding="10dp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/otp_section"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:visibility="gone">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_outline_lock_24"
                android:layout_gravity="center_vertical"
                android:contentDescription="@string/password"/>

            <EditText
                android:id="@+id/otp_e_txt"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:autofillHints="password"
                android:hint="@string/otp"
                android:inputType="number"
                android:padding="10dp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/password_section"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:visibility="gone">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_outline_lock_24"
                android:layout_gravity="center_vertical"
                android:contentDescription="@string/password"/>

            <EditText
                android:id="@+id/password_e_txt"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:padding="10dp"
                android:autofillHints="password"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/confirm_password_section"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:visibility="gone">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_outline_lock_24"
                android:layout_gravity="center_vertical"
                android:contentDescription="@string/password"/>

            <EditText
                android:id="@+id/confirm_password_e_txt"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="@string/confirm_password"
                android:inputType="textPassword"
                android:padding="10dp"
                android:autofillHints="password" />

        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/recovery_btn"
                style="@style/Button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:tag="email"
                android:text="@string/recover" />

            <com.google.android.material.progressindicator.CircularProgressIndicator
                android:id="@+id/recovery_progress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:indeterminate="true"
                android:visibility="invisible"/>

        </RelativeLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/terms_privacy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:text="@string/terms_privacy"
        android:textColor="@color/red"
        android:textStyle="bold" />

</RelativeLayout>